--- a/react-app/src/a_container/root/index.scss
+++ b/react-app/src/a_container/root/index.scss
@@ -1,4 +1,5 @@
 .router-main-container {
+	// background-color: red;
 }
 
 .router-main-ul {
@@ -11,5 +12,6 @@
 	list-style-type: none;
 	a {
 		text-decoration: none;
+		color: #ccc;
 	}
 }
