--- a/react-app/src/index.scss
+++ b/react-app/src/index.scss
@@ -5,5 +5,36 @@ body {
 }
 .root{
   position:relative;
-  height:100%;
+}
+
+body {
+  font-family: 'Avenir', Helvetica, Arial, sans-serif,"微软雅黑";
+}
+html,body,#root{
+  width: 100%;height: 100%;
+}
+html,body, ul, li, ol, dl, dd, dt, p, h1, h2, h3, h4, h5, h6, form, fieldset, legend, img, input{ margin:0; padding:0; }
+a{text-decoration:none;}
+a:hover{text-decoration:underline;}
+ul,ol{list-style: none;}
+img{border:0;display:block;}
+input,textarea,button{outline:none;}
+input::-webkit-input-placeholder{ color: #989898;}
+b,strong{font-weight:100;}
+i,em{font-style:normal;}
+/* h1,h2,h3,h4,h5,h6{font-size:16px;font-weight:100;}*/
+h1, h2, h3, h4, h5, h6, p, span, i{
+  word-break: break-all;
+}
+
+/*内容样式*/
+.main-container {
+	/*background: #ccc;*/
+	float:left;
+	width: 100%;
+    position: fixed;
+    top: 64px;
+    left: 0;
+    bottom: 0;
+    overflow-y: auto;
 }
